--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     
     <link rel="stylesheet" type="text/css" href="style.css">
-   
+    <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 <div id=style>
@@ -20,6 +21,8 @@
         <li id='rotate'><a href="">About us</a></li>
     </ul>
 </div>
+
+
 <h1 id='breakingNews'><font color='white'>Breaking News</font></h1>
 
 <marquee behavior="" direction="right"><font size='4rem' >আমাদের নতুন ওয়েবসাইট এ স্বাগতম।</font> </marquee>
