--- a/bootsrap.html
+++ b/bootsrap.html
@@ -5,9 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootStyle.css">
+    <link rel="stylesheet" href="bootstrapStyle.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+   
 </head>
 <body>
-    <button id="id" class="btn btn-primary ">Click</button>
+    <div class="container">
+       <!--Show of navigation menu--> 
+    <header>
+    <nav  class="navbar navbar-expand-sm bg-dark navbar-dark"  >
+        <a class='navbar-brand fa-3x' href="">New Website</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul  class="navbar-nav ml-auto">
+            <li class="nav-item mr-4"> 
+              
+                <a class="nav-link fa-2x" href=""><i class="fas fa-image "></i> Image</a>
+            </li>
+            <li class="nav-item mr-4">
+                <a class="nav-link fa-2x" href=""><i class="fas fa-video "></i> Video</a>
+            </li>
+            <li class="nav-item mr-4">
+                <a class="nav-link fa-2x" href=""><i class="fas fa-volume-down"></i> Audio</a>
+            </li >
+            <li class="nav-item mr-4">
+                <a class="nav-link fa-2x" href=""><i class="fas fa-phone "></i> Contact us</a>
+            </li>
+        </ul>
+        </div>
+    </nav>
+</header>
+<br>
+<!--Show of row and column,one row consists 12 columns in pc mode-->
+<div class="row">
+    <div class="col-lg-3 col-md-4 col-sm-6" style="background-color:red ;  color: white;">My name is Sazid</div>
+    <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: blue; color: white">My name is Sazid</div>
+    <div class="col-lg-3 col-md-4 col-sm-6" style="background-color:blueviolet ; color: white">My name is Sazid</div>
+    <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: brown; color: white">My name is Sazid</div>
+</div>
+<br>
+<!--Show of carousel slider-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="hover" >
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="image/1.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="image/2.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="image/3.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+    <!--Making cards-->
+    <section id="card-section">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card " style="width: 18rem;">
+                    <img src="image/2.2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                
+            </div>
+        </div>
+    </section>
+</div>
+<!--Making a progress bar-->
+<div class="progress">
+    <div class="progress-bar bg-primary" role="progressbar" style="width: 25%;"
+        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Description</div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
