--- a/website.html
+++ b/website.html
@@ -6,6 +6,7 @@
     <title>Document</title>
         
     <link rel="stylesheet" type="text/css" href="websiteStyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -32,6 +33,6 @@
     </menu>
    </nav> 
    <br>
-
+  
 </body>
 </html>
