--- a/bootsrap.html
+++ b/bootsrap.html
@@ -47,48 +47,50 @@
 </div>
 <br>
 <!--Show of carousel slider-->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="hover" >
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="image/1.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="image/2.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="image/3.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
-      </div>
+<div class="row"><div class="col-lg-1"><div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="hover" >
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="image/1.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item">
+      <img src="image/2.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="image/3.jpg" width="100px" height="200px" class="d-block w-100" alt="...">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div></div></div>
+
     <!--Making cards-->
-    <section id="card-section">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card " style="width: 18rem;">
-                    <img src="image/2.2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+ <section id="card-section">
+      <div class="row">
+          <div class="col-lg-4">
+              <div class="card " style="width: 18rem;">
+                  <img src="image/2.2.jpg"  class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
-                
-            </div>
-        </div>
-    </section>
+                </div>
+              
+          </div>
+      </div>
+  </section>
+   
 </div>
 <!--Making a progress bar-->
 <div class="progress">
