--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-<div id=style>
+<div id="style">
     <ul>
         <li><a class='tooltip' href="">Home
             <span>Great Website</span>
@@ -18,13 +18,14 @@
         <li><a href="">Image</a></li>
         <li><a href="">Video</a></li>
         <li><a href="">Audio</a></li>
-        <li id='rotate'><a href="">About us</a></li>
+        <li class="rotate"><a href="#" target="_blank">About us</a></li>
     </ul>
 </div>
 
-
 <h1 id='breakingNews'><font color='white'>Breaking News</font></h1>
 
-<marquee behavior="" direction="right"><font size='4rem' >আমাদের নতুন ওয়েবসাইট এ স্বাগতম।</font> </marquee>
+
+<marquee behavior="" direction="right"><font size='4rem' color='white'>আমাদের নতুন ওয়েবসাইট এ স্বাগতম।</font> </marquee>
 </body>
+
 </html>
