--- a/bootsrap.html
+++ b/bootsrap.html
@@ -12,41 +12,49 @@
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container-fluid pt-2 "><!--pt-1==padding top 4px=0.25rem(16px=1rem)-->
-       <!--Show of navigation menu--> 
+       <!--*Show of navigation menu--> 
     <header>
     <nav  class="navbar navbar-expand-sm bg-dark navbar-dark"  >
-        <a class='navbar-brand fa-3x display-2' href="">New Website</a>
+        <a class='navbar-brand fa-3x display-1' href="">New Website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul  class="navbar-nav ml-auto">
-            <li class="nav-item mr-4" role="button " class="btn btn-primary dropdown-toggle " data-hover="dropdown"" data-toggle="dropdown"> 
-               <a class="nav-link fa-2x" href=""><i class="fas fa-image "></i> Image</a>
-                <div class="dropdown">
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Link 1</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
-                  </div>
-                </div>
-                
+            <li class="nav-item mr-4"> 
+               <a class="nav-link fa-2x" href=""><i style="color: blueviolet;" class="fas fa-image "></i> Image</a>
+            
+  
             </li>
             <li class="nav-item mr-4">
-                <a class="nav-link fa-2x" href=""><i class="fas fa-video "></i> Video</a>
+                <a class="nav-link fa-2x" href=""><i style="color: red;" class="fas fa-video "></i> Video</a>
             </li>
             <li class="nav-item mr-4">
-                <a class="nav-link fa-2x" href=""><i class="fas fa-volume-down"></i> Audio</a>
+                <a class="nav-link fa-2x" href=""><i style="color: greenyellow;"  class="fas fa-volume-down"></i> Audio</a>
             </li >
             <li class="nav-item mr-4">
-                <a class="nav-link fa-2x" href=""><i class="fas fa-phone "></i> Contact us</a>
+                <a class="nav-link fa-2x" href=""><i style="color: fuchsia;" class="fas fa-phone "></i> Contact us</a>
             </li>
         </ul>
         </div>
     </nav>
 </header>
 <br>
-<!--Show of row and column,one row consists 12 columns in pc mode-->
+<!--*This is collapse-->
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-target
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+  </div>
+</div>
+<!--*Show of row and column,one row consists 12 columns in pc mode-->
 <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6" style="background-color:red ;  color: white;">My name is Sazid</div>
     <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: blue; color: white">My name is Sazid</div>
@@ -54,7 +62,7 @@
     <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: brown; color: white">My name is Sazid</div>
 </div>
 <br>
-<!--Show of carousel slider-->
+<!--*Show of carousel slider-->
 <div class="row " ><div class="col-lg-3"><div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="hover" >
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -82,7 +90,7 @@
   </a></div>
 </div></div></div>
 
-<!--Making cards-->
+<!--*Making cards-->
    <section id="card-section">
           <div class="col-lg-3">
               <div class="card " style="width: 18rem;">
@@ -96,12 +104,12 @@
               </div>
     </section>
 
-<!--Making a progress bar
+<!--*Making a progress bar
 <div class="progress">
     <div class="progress-bar bg-primary" role="progressbar" style="width: 25%;"
         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Description</div>
 </div>-->
-<!--Making a alert-->
+<!--*Making a alert-->
 <div class="alert alert-success alert-dismissible  fade show mt-5 " role="alert">
  
   <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -112,15 +120,20 @@
 </div>
 <h1>This is a badge <span class="badge badge-secondary">New</span></h1>
 <div class="spinner-grow text-info float-right"><h1>Hello</h1></div>
-<!--Creating a pagination-->
+<!--*Creating a pagination-->
 <ul class="pagination">
   <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
   <li class="page-item active"><a class="page-link" href="#">1</a></li>
   <li class="page-item"><a class="page-link" href="index.html">2</a></li>
   <li class="page-item"><a class="page-link" href="website.html">3</a></li>
+  <li class="page-item"><a class="page-link" href="website.html">4</a></li>
+  <li class="page-item"><a class="page-link" href="website.html">5</a></li>
+  <li class="page-item"><a class="page-link" href="website.html">6</a></li>
+  <li class="page-item"><a class="page-link" href="website.html">7</a></li>
+  <li class="page-item"><a class="page-link" href="website.html">8</a></li>
   <li class="page-item"><a class="page-link" href="#">Next</a></li>
 </ul>
-<!--Making a modal-->
+<!--*Making a modal-->
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Launch demo modal
@@ -144,7 +157,7 @@
     </div>
   </div>
 </div>
-<!--Awesome modal-->
+<!--*Awesome modal-->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
   Launch demo 
 </button>
@@ -161,8 +174,12 @@
   </div>
 </div>
 </div></div>
+
+<!--*Bootstrap Javacsript CDN-->
+<div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
