--- a/website.html
+++ b/website.html
@@ -4,35 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> 
     <link rel="stylesheet" type="text/css" href="websiteStyle.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+
 </head>
 <body>
 
-   <nav id='navbar'>
-       <menu id='mainMenu'>
-       <ul id='container'>
-        <div id="logo">
-        <li style="order: 6;"><img src="image/google-icon.svg" width="150px" height="70px" alt=""></li>
+    <div id="logo">
+       <img src="image/google-icon.svg" width="150px" height="70px" alt="">
    </div>
-           <li id='openSub_menu' style="order: 5;"><a href="">Home</a>
-            <ul id="sub-menu">
-                <li><a href="#">Image</a></li>
-                <li><a href="">Audio</a></li>
-                <li><a href="">Video</a></li>
-                <li><a href="">Mission</a></li>
-                <li><a href="">Vision</a></li>
+<ul id='container'>
+ <!--style="order: 6;"-->
+ <li id='openSub_menu' ><a href="">Home</a>
+           <ul id="sub-menu"><li>Image</li><li>Audio</li><li>Video</li><li>Mission</li><li>Vision</li>
             </ul>
         </li>
-           <li style="order: 4;"><a href="">Image</a></li>
-           <li style="order: 3;"><a href="">Audio</a></li>
-           <li style="order: 2;"><a href="">Video</a></li>
-           <li style="order: 1;"><a href="">Mission</a></li>
+           <li ><a href="">Image</a></li>
+           <li "><a href="">Audio</a></li>
+           <li><a href="">Video</a></li>
+           <li ><a href="">Mission</a></li>
        </ul>
-    </menu>
-   </nav> 
-   <br>
   
+ 
+
 </body>
 </html>
