--- a/bootsrap.html
+++ b/bootsrap.html
@@ -41,7 +41,7 @@
 </header>
 <br>
 <!--*This is collapse-->
-<p>
+<p id="collapseP">
   <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     Link with href
   </a>
@@ -118,6 +118,8 @@
   <hr>
   <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
 </div>
+<!--*Badge-->
+
 <h1>This is a badge <span class="badge badge-secondary">New</span></h1>
 <div class="spinner-grow text-info float-right"><h1>Hello</h1></div>
 <!--*Creating a pagination-->
@@ -173,8 +175,6 @@
     </div>
   </div>
 </div>
-</div></div>
-
 <!--*Bootstrap Javacsript CDN-->
 <div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
