--- a/website.html
+++ b/website.html
@@ -27,7 +27,15 @@
            <li ><a href="">Mission</a></li>
        </ul>
   
- 
+       <div id="bubbles">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+        <img src="image/bubble.png" alt="">
+    </div>
 
 </body>
 </html>
