--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1 id='breakingNews'><font color='white'>Breaking News</font></h1>
 
 
-<marquee behavior="" direction="right"><font size='4rem' color='white'>আমাদের নতুন ওয়েবসাইট এ স্বাগতম।</font> </marquee>
+<marquee behavior="" direction="right"><a class="dot"></a><font size='4rem' color='white'>আমাদের নতুন ওয়েবসাইট এ স্বাগতম।</font> </marquee>
 </body>
 
 </html>
