--- a/sideNav.html
+++ b/sideNav.html
@@ -21,8 +21,19 @@
     </div>
     <button>Watch Video</button>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9YffrCViTVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1 id="show">
+      1
+    </h1>
+   <progress max="100" min="1" value=""></progress>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
+
+ setInterval(function hello(){
+    var myCount=$('#show').text()
+    $('#show').html(++myCount)
+   }, 1000);
+   
+
   $('a').click(function() {
     if ($('div').hasClass('div')) {
       $('div').removeClass('div')
